--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,15 @@
       <version>1.3.2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+<!--    <dependency>-->
+<!--      <groupId>org.aspectj</groupId>-->
+<!--      <artifactId>aspectjweaver</artifactId>-->
+<!--      <version>1.9.8.RC3</version>-->
+<!--      <scope>runtime</scope>-->
+<!--    </dependency>-->
+
+
   </dependencies>
 
   <build>
