--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
       <version>42.3.1</version>
     </dependency>
 
+<!--    &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core &ndash;&gt;-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-core</artifactId>-->
+<!--      <version>2.17.0</version>-->
+<!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
 <!--    <dependency>-->
