--- a/pom.xml
+++ b/pom.xml
@@ -69,12 +69,13 @@
 <!--    </dependency>-->
 
     <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
-<!--    <dependency>-->
-<!--      <groupId>org.aspectj</groupId>-->
-<!--      <artifactId>aspectjweaver</artifactId>-->
-<!--      <version>1.9.8.RC3</version>-->
-<!--      <scope>runtime</scope>-->
-<!--    </dependency>-->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.8.RC3</version>
+    </dependency>
+
+
 
 
   </dependencies>
